--- a/src/app/loginsuccess/loginsuccess.component.html
+++ b/src/app/loginsuccess/loginsuccess.component.html
@@ -1,1 +1,7 @@
-<p>loginsuccess works!</p>
+<div class="container">    
+    <div class="col-md-6 col-md-offset-3 loginBox">    
+        Welcome,  {{id}}    
+        <a href="javascript:void(0);" (click)="logout()">Logout</a>    
+    </div>    
+  </div>  
+<small [routerLink]="['/sms']">Send Message?</small>
