--- a/src/app/transciver/transciver.component.html
+++ b/src/app/transciver/transciver.component.html
@@ -37,5 +37,6 @@
       </div>
 
       <button [disabled]="sendSmsform.form.invalid" type="submit" class="btn btn-info">Send Sms</button>
+      <button  type="reset" class="btn btn-light">Cancel</button>
     </form>
   </div>
