--- a/src/app/resgistration/resgistration.component.html
+++ b/src/app/resgistration/resgistration.component.html
@@ -1,46 +1,48 @@
 <div class="container">
-    <h2 class="textual">User Registration</h2>
-    <form #Registrationform="ngForm" (ngSubmit)="registerUser()">
-     <!-- <small [class.text-danger]="msg.status==500">{{msg.message}}</small>-->
-     <small class="text-danger">{{msg}}</small>
-      <div class="form-group">
-        <label for="email">Email:</label>
-        <input type="email" class="form-control" placeholder="Enter email" name="email" [(ngModel)]="user.emailId" required pattern="^\w+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$" #email="ngModel"
-        [class.is-invalid]="email.invalid && email.touched"
-        >
-        <!-- <small class="text-danger" [class.d-none]="email.valid || email.untouched">Email is required field!</small> -->
-        <div *ngIf="email.errors && (email.invalid && email.touched)">
-          <small class="text-danger" *ngIf="email.errors.required">Email is required field!</small>
-          <small class="text-danger" *ngIf="email.errors.pattern">Enter a valid email!</small>
-        </div>
+  <h2 class="textual">User Registration</h2>
+  <form #Registrationform="ngForm" (ngSubmit)="registerUser()">
+   <!-- <small [class.text-danger]="msg.status==500">{{msg.message}}</small>-->
+   <small class="text-danger">{{msg}}</small>
+    <div class="form-group">
+      <label for="email">Email:</label>
+      <input type="email" class="form-control" placeholder="Enter email" name="email" [(ngModel)]="user.emailId" required pattern="^\w+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$" #email="ngModel"
+      [class.is-invalid]="email.invalid && email.touched"
+      >
+      <!-- <small class="text-danger" [class.d-none]="email.valid || email.untouched">Email is required field!</small> -->
+      <div *ngIf="email.errors && (email.invalid && email.touched)">
+        <small class="text-danger" *ngIf="email.errors.required">Email is required field!</small>
+        <small class="text-danger" *ngIf="email.errors.pattern">Enter a valid email!</small>
       </div>
+    </div>
 
-      <div class="form-group">
-        <label for="userName">User Name:</label>
-        <input type="text" class="form-control" placeholder="Enter user name" name="userName" [(ngModel)]="user.userName" required #userName="ngModel"
-        [class.is-invalid]="userName.invalid && userName.touched"
-        >
-        <small class="text-danger" [class.d-none]="userName.valid || userName.untouched">User name is required field!</small>
-      </div>
+    <div class="form-group">
+      <label for="userName">User Name:</label>
+      <input type="text" class="form-control" placeholder="Enter user name" name="userName" [(ngModel)]="user.userName" required #userName="ngModel"
+      [class.is-invalid]="userName.invalid && userName.touched"
+      >
+      <small class="text-danger" [class.d-none]="userName.valid || userName.untouched">User name is required field!</small>
+    </div>
 
-      <div class="form-group">
-        <label for="password">Password:</label>
-        <input type="password" class="form-control" placeholder="Enter password" name="password" [(ngModel)]="user.password" required #password="ngModel"
-        [class.is-invalid]="password.invalid && password.touched"
-        >
-        <small class="text-danger" [class.d-none]="password.valid || password.untouched">password is required field!</small>
-      </div>
+    <div class="form-group">
+      <label for="password">Password:</label>
+      <input type="password" class="form-control" placeholder="Enter password" name="password" [(ngModel)]="user.password" required #password="ngModel"
+      [class.is-invalid]="password.invalid && password.touched"
+      >
+      <!--<small class="text-danger" *ngIf="password.errors.minlength">Password must be at least 6 characters</small>-->
+      <small class="text-danger" [class.d-none]="password.valid || password.untouched">password is required field!</small>
+    </div>
 
-      <div class="form-group">
-        <label for="pwd">Confirm password:</label>
-        <input type="password" class="form-control" placeholder="Enter confirm password" name="pwd" #pwd="ngModel" [(ngModel)]="user.confirmPassword" required 
-        [class.is-invalid]="pwd.invalid && pwd.touched"
-        >
-        <small class="text-danger" [class.d-none]="(pwd.value == password.value) || pwd.untouched">password and confirm password must be the same!</small>
-      </div>
+    <div class="form-group">
+      <label for="pwd">Confirm password:</label>
+      <input type="password" class="form-control" placeholder="Enter confirm password" name="pwd" #pwd="ngModel" [(ngModel)]="user.confirmPassword" required 
+      [class.is-invalid]="pwd.invalid && pwd.touched"
+      >
+      <small class="text-danger" [class.d-none]="(pwd.value == password.value) || pwd.untouched">password and confirm password must be the same!</small>
+    </div>
 
-      <button [disabled]="Registrationform.form.invalid" type="submit" class="btn btn-info">Register</button>
-    </form>
-    <!--<small class="float-right" (click)="gotoregistration()">New user? Register here</small>-->
-    <small class="float-right btextual" [routerLink]="['/login']">Existing user? Login here</small>
-  </div>
+    <button [disabled]="Registrationform.form.invalid" type="submit" class="btn btn-info">Register</button>
+    <button  type="reset" class="btn btn-light">Cancel</button>
+  </form>
+  <!--<small class="float-right" (click)="gotoregistration()">New user? Register here</small>-->
+  <small class="float-right btextual" [routerLink]="['/login']">Existing user? Login here</small>
+</div>
