--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,31 +1,80 @@
-<div class="container">
-    <h2>User Login</h2>
-    <form #loginform="ngForm" (ngSubmit)="loginUser()">
-      <small class="text-danger">{{msg}}</small>
-      <div class="form-group">
-        <label for="email">Email:</label>
-        <input type="email" class="form-control" placeholder="Enter email" name="email" [(ngModel)]="user.emailId" required pattern="^\w+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$" #email="ngModel"
-        [class.is-invalid]="email.invalid && email.touched"
-        >
-        <!-- <small class="text-danger" [class.d-none]="email.valid || email.untouched">Email is required field!</small> -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Creative - Bootstrap 3 Responsive Admin Template">
+  <meta name="author" content="GeeksLabs">
+  <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
+  <link rel="shortcut icon" href="assets/dashboard/img/favicon.png">
+
+  <title>Login</title>
+</head>
+
+<body class="login-img3-body">
+
+  <div class="container">
+
+    <form class="login-form" #loginform="ngForm" (ngSubmit)="loginUser()">
+      
+      <div class="login-wrap">
+        <p class="login-img"><i class="icon_lock_alt"></i></p>
+        <small class="text-danger">{{msg}}</small>
         <div *ngIf="email.errors && (email.invalid && email.touched)">
           <small class="text-danger" *ngIf="email.errors.required">Email is required field!</small>
           <small class="text-danger" *ngIf="email.errors.pattern">Enter a valid email!</small>
         </div>
-      
+        <div class="input-group">
+          <span class="input-group-addon"><i class="icon_profile"></i></span>
+          <input type="email" class="form-control"   placeholder="Email" name="email" [(ngModel)]="user.emailId" required pattern="^\w+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$" #email="ngModel"
+          [class.is-invalid]="email.invalid && email.touched">
+          
+        </div>
+
+        <div>
+          <small class="text-danger" [class.d-none]="password.valid || password.untouched">password is required field!</small>
+       
+        </div>
+        <div class="input-group">
+          <span class="input-group-addon"><i class="icon_key_alt"></i></span>
+          <input type="password" class="form-control" placeholder="Password" name="password" [(ngModel)]="user.password" required #password="ngModel"
+          [class.is-invalid]="password.invalid && password.touched">
+         </div>
+        <label class="checkbox">
+                <input type="checkbox" value="remember-me"> Remember me
+                <span class="pull-right"> <a href="/login/#"> Forgot Password?</a></span>
+            </label>
+        <button class="btn btn-primary btn-lg btn-block" type="submit" [disabled]="loginform.form.invalid">Login</button>
+        <button class="btn btn-info btn-lg btn-block" type="submit" [routerLink]="['/registration']">Signup</button>
       </div>
-      <div class="form-group">
-        <label for="password">Password:</label>
-        <input type="password" class="form-control" placeholder="Enter password" name="password" [(ngModel)]="user.password" required #password="ngModel"
-        [class.is-invalid]="password.invalid && password.touched"
-        >
-        <small class="text-danger" [class.d-none]="password.valid || password.untouched">password is required field!</small>
-      </div>
-      <div class="checkbox">
-        <label><input type="checkbox" name="remember"> Remember me</label>
-      </div>
-      <button [disabled]="loginform.form.invalid" type="submit" class="btn btn-info">Login</button>
     </form>
-    <!--<small class="float-right" (click)="gotoregistration()">New user? Register here</small>-->
-    <small class="float-right" [routerLink]="['/registration']">New user? Register here</small>
+    <div class="text-right">
+      <div class="credits">
+          <!--
+            All the links in the footer should remain intact.
+            You can delete the links only if you purchased the pro version.
+            Licensing information: https://bootstrapmade.com/license/
+            Purchase the pro version form: https://bootstrapmade.com/buy/?theme=NiceAdmin
+          -->
+        <!--  Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>-->
+        </div>
+    </div>
   </div>
+
+
+</body>
+
+</html>
+
+<app-footer></app-footer>
+
+
+
+
+
+
+
+
+
+
