--- a/src/app/loginsuccess/loginsuccess.component.html
+++ b/src/app/loginsuccess/loginsuccess.component.html
@@ -1,10 +1,32 @@
 <app-dashboard></app-dashboard>
+<!--main content start-->
+<section id="main-content">
+  <section class="wrapper">
+    <!--overview start-->
+    <div class="row">
+      <div class="col-lg-12">
+        <h3 class="page-header"><i class="fa fa-laptop"></i> Dashboard</h3>
+        <ol class="breadcrumb">
+          <li><i class="fa fa-home"></i><a href="/loginsuccess">Home</a></li>
+          <li><i class="fa fa-laptop"></i>Dashboard</li>
+        </ol>
+      </div>
+    </div>
+
+
+    <!-- project team & activity end -->
+
+  </section>
+  <div class="text-right">
+    <div class="credits">
+    </div>
+  </div>
+</section>
+<!--main content end-->
 <div class="container">    
     <div class="col-md-6 col-md-offset-3 loginBox">    
-        Welcome,  {{id}}    
-        <a href="javascript:void(0);" (click)="logout()">Logout</a>    
+        Welcome,  {{id}}       
     </div>    
   </div>  
-<small [routerLink]="['/sms']">Send Message?</small>
 
 
