--- a/src/app/resgistration/resgistration.component.html
+++ b/src/app/resgistration/resgistration.component.html
@@ -1,48 +1,99 @@
-<div class="container">
-  <h2 class="textual">User Registration</h2>
-  <form #Registrationform="ngForm" (ngSubmit)="registerUser()">
-   <!-- <small [class.text-danger]="msg.status==500">{{msg.message}}</small>-->
-   <small class="text-danger">{{msg}}</small>
-    <div class="form-group">
-      <label for="email">Email:</label>
-      <input type="email" class="form-control" placeholder="Enter email" name="email" [(ngModel)]="user.emailId" required pattern="^\w+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$" #email="ngModel"
-      [class.is-invalid]="email.invalid && email.touched"
-      >
-      <!-- <small class="text-danger" [class.d-none]="email.valid || email.untouched">Email is required field!</small> -->
-      <div *ngIf="email.errors && (email.invalid && email.touched)">
-        <small class="text-danger" *ngIf="email.errors.required">Email is required field!</small>
-        <small class="text-danger" *ngIf="email.errors.pattern">Enter a valid email!</small>
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Creative - Bootstrap 3 Responsive Admin Template">
+  <meta name="author" content="GeeksLabs">
+  <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
+  <link rel="shortcut icon" href="assets/dashboard/img/favicon.png">
+
+  <title>Register</title>
+</head>
+
+<body class="login-img3-body">
+
+  <div class="container">
+
+    <form class="login-form" #Registrationform="ngForm" (ngSubmit)="registerUser()">
+      
+      <div class="login-wrap">
+        <small class="text-danger">{{msg}}</small>
+        <div class="float-right btextual" *ngIf="email.errors && (email.invalid && email.touched)">
+          <small class="text-danger" *ngIf="email.errors.required">Email is required field!</small>
+          <small class="text-danger" *ngIf="email.errors.pattern">Enter a valid email!</small>
+        </div>
+        <div class="input-group">
+          
+          <input type="email" class="form-control"  placeholder="Email" name="email" [(ngModel)]="user.emailId" required pattern="^\w+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$" #email="ngModel"
+          [class.is-invalid]="email.invalid && email.touched">
+          
+        </div>
+
+
+
+        <div class="float-right btextual">
+          <small class="text-danger" [class.d-none]="userName.valid || userName.untouched">User name is required field!</small>
+        </div>
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="User name" name="userName" [(ngModel)]="user.userName" required #userName="ngModel"
+          [class.is-invalid]="userName.invalid && userName.touched"
+          >
+        </div>
+
+        <div class="float-right btextual">
+          <small class="text-danger" [class.d-none]="password.valid || password.untouched">password is required field!</small>
+        </div>
+        <div class="input-group">
+          <input type="password" class="form-control" placeholder="Password" name="password" [(ngModel)]="user.password" required #password="ngModel"
+          [class.is-invalid]="password.invalid && password.touched" data-rule="minlen:8" data-msg="Please enter at least 8 chars">
+         </div>
+
+
+         <div class="float-right btextual">
+          <small class="text-danger" [class.d-none]="(pwd.value == password.value) || pwd.untouched">password and confirm password must be the same!</small>
+         </div>
+         <div class="input-group">
+          <input type="password" class="form-control" placeholder="Confirm password" name="pwd" #pwd="ngModel" [(ngModel)]="user.confirmPassword" required 
+            [class.is-invalid]="pwd.invalid && pwd.touched">
+          </div>
+
+        <button class="btn btn-primary btn-lg btn-block" type="submit" [disabled]="Registrationform.form.invalid">Signup</button>
+        
+        <button class="btn btn-info btn-lg btn-block" type="submit" [routerLink]="['/login']">Login</button>
       </div>
+    </form>
+    <div class="text-right">
+      <div class="credits">
+         
+        </div>
     </div>
+  </div>
 
-    <div class="form-group">
-      <label for="userName">User Name:</label>
-      <input type="text" class="form-control" placeholder="Enter user name" name="userName" [(ngModel)]="user.userName" required #userName="ngModel"
-      [class.is-invalid]="userName.invalid && userName.touched"
-      >
-      <small class="text-danger" [class.d-none]="userName.valid || userName.untouched">User name is required field!</small>
-    </div>
 
-    <div class="form-group">
-      <label for="password">Password:</label>
-      <input type="password" class="form-control" placeholder="Enter password" name="password" [(ngModel)]="user.password" required #password="ngModel"
-      [class.is-invalid]="password.invalid && password.touched"
-      >
-      <!--<small class="text-danger" *ngIf="password.errors.minlength">Password must be at least 6 characters</small>-->
-      <small class="text-danger" [class.d-none]="password.valid || password.untouched">password is required field!</small>
-    </div>
+</body>
 
-    <div class="form-group">
-      <label for="pwd">Confirm password:</label>
-      <input type="password" class="form-control" placeholder="Enter confirm password" name="pwd" #pwd="ngModel" [(ngModel)]="user.confirmPassword" required 
-      [class.is-invalid]="pwd.invalid && pwd.touched"
-      >
-      <small class="text-danger" [class.d-none]="(pwd.value == password.value) || pwd.untouched">password and confirm password must be the same!</small>
-    </div>
+</html>
 
-    <button [disabled]="Registrationform.form.invalid" type="submit" class="btn btn-info">Register</button>
-    <button  type="reset" class="btn btn-light">Cancel</button>
-  </form>
-  <!--<small class="float-right" (click)="gotoregistration()">New user? Register here</small>-->
-  <small class="float-right btextual" [routerLink]="['/login']">Existing user? Login here</small>
-</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
