--- a/src/app/sms-list/sms-list.component.html
+++ b/src/app/sms-list/sms-list.component.html
@@ -1,14 +1,36 @@
 
 <app-dashboard></app-dashboard>
-<table class="table">
-    <th>Message</th>
-    <th>Source Address</th>
-    <th>Destination Address</th>
-    <th>Action</th>
-    <tr *ngFor="let sms of service.list">
-      <td (click)="populateForm(sms)">{{sms.shortMessage}}</td>
-      <td (click)="populateForm(sms)">{{sms.sourceAddr}}</td>
-      <td (click)="populateForm(sms)">{{sms.destAddr}}</td>
-      <td><button (click)="onDelete(sms.id)" class="btn btn-sm btn-outline-danger">X</button></td>
-    </tr>
-  </table>
+<!--main content start-->
+<section id="main-content">
+  <section class="wrapper">
+    <!--overview start-->
+    <div class="row">
+      <div class="col-lg-12">
+        <h3 class="page-header"><i class="fa fa-table"></i>Messages</h3>
+        <ol class="breadcrumb">
+          <li><i class="fa fa-home"></i><a href="/loginsuccess">Home</a></li>
+          <li><i class="fa fa-th-list"></i>All Messages</li>
+        </ol>
+      </div>
+    </div>
+
+
+<br>
+
+<div class="row">
+  <div class="col-lg-10">
+    <table class="table table-striped table-advance table-hover">
+      <th>Message</th>
+      <th>Source Address</th>
+      <th>Destination Address</th>
+      <th> <i class="icon_cogs"></i>Action</th>
+      <tr *ngFor="let sms of service.list">
+        <td (click)="populateForm(sms)">{{sms.shortMessage}}</td>
+        <td (click)="populateForm(sms)">{{sms.sourceAddr}}</td>
+        <td (click)="populateForm(sms)">{{sms.destAddr}}</td>
+        <td>
+          <button (click)="onDelete(sms.id)" class="btn btn-danger"><i class="icon_close_alt2"></i></button>
+        </td>
+      </tr>
+    </table>
+  </div>
