--- a/src/app/transciver/transciver.component.html
+++ b/src/app/transciver/transciver.component.html
@@ -1,43 +1,93 @@
 <app-dashboard></app-dashboard>
-<div class="container">
-    <h2 class="textual">Send Message</h2>
-    <form #sendSmsform="ngForm" (ngSubmit)="sendSms()">
-     <!-- <small [class.text-danger]="msg.status==500">{{msg.message}}</small>
-     <small class="text-danger">{{msg}}</small>-->
-      <div class="form-group">
-        <label for="shortMessage">Message:</label>
-        <textarea class="form-control" name=shortMessage placeholder="Enter your message" [(ngModel)]="sms.shortMessage" required #shortMessage="ngModel"
-        [class.is-invalid]="shortMessage.invalid && shortMessage.touched"></textarea>
+<!--main content start-->
+<section id="main-content">
+  <section class="wrapper">
+    <!--overview start-->
+    <div class="row">
+      <div class="col-lg-12">
+        <h3 class="page-header"><i class="icon-envelope-l"></i>Message</h3>
+        <ol class="breadcrumb">
+          <li><i class="fa fa-home"></i><a href="/loginsuccess">Home</a></li>
+          <li><i class="icon-envelope-l"></i>Message</li>
+        </ol>
+      </div>
+    </div>
+
+
+<br>
+    <div class="row">
+      <div class="col-lg-1"></div>
+      <div class="col-lg-4">
         
-         <div *ngIf="shortMessage.errors && (shortMessage.invalid && shortMessage.touched)">
-          <small class="text-danger" *ngIf="shortMessage.errors.required">Message is required field!</small>
+        <div class="recent">
+          <h3>Send a message</h3>
+        </div>
+        
+        
+        <form #sendSmsform="ngForm" (ngSubmit)="sendSms()" role="form" class="contactForm">
+         
+          <div class="form-group">
+            <label for="shortMessage">Message:</label>
+            <textarea class="form-control" name=shortMessage placeholder="Enter your message" [(ngModel)]="sms.shortMessage" required #shortMessage="ngModel"
+            [class.is-invalid]="shortMessage.invalid && shortMessage.touched"></textarea>
+            
+             <div *ngIf="shortMessage.errors && (shortMessage.invalid && shortMessage.touched)">
+              <small class="text-danger" *ngIf="shortMessage.errors.required">Message is required field!</small>
+            </div>
+          </div>
+    
+          <div class="form-group">
+            <label for="sourceAddr">Source Address:</label>
+            <input type="tel" class="form-control" placeholder="Enter source address" name="sourceAddr" [(ngModel)]="sms.sourceAddr" required pattern="[0-9 ]{8}" #sourceAddr="ngModel"
+            [class.is-invalid]="sourceAddr.invalid && sourceAddr.touched"
+            >
+            <div *ngIf="sourceAddr.errors && (sourceAddr.invalid && sourceAddr.touched)">
+                <small class="text-danger" *ngIf="sourceAddr.errors.required">Source address is required field!</small>
+                 <small class="text-danger" *ngIf="sourceAddr.errors.pattern">Enter a valid phone number!</small>
+              </div>
+          </div>
+    
+          <div class="form-group">
+            <label for="destAddr">Destination Address:</label>
+            <input type="tel" class="form-control" placeholder="Enter destination address" name="destAddr" [(ngModel)]="sms.destAddr" required pattern="[0-9 ]{8}" #destAddr="ngModel"
+            [class.is-invalid]="destAddr.invalid && destAddr.touched"
+            >
+            <div *ngIf="destAddr.errors && (destAddr.invalid && destAddr.touched)">
+                <small class="text-danger" *ngIf="destAddr.errors.required" >Destination address is required field!</small>
+            <small class="text-danger" *ngIf="destAddr.errors.pattern">Enter a valid phone number!</small>
+              </div>
+            
+          </div>
+    
+          <div class="text-center">
+            <button [disabled]="sendSmsform.form.invalid" type="submit" class="btn btn-info">Send Message</button>
+            <button  type="reset" class="btn btn-light">Cancel</button>
+          </div>
+          
+        </form>
+      </div>
+
+      <div class="col-lg-8">
+        <div class="recent">
+        </div>
+        <div class="">
+         <!-- <app-sms-list></app-sms-list>-->
         </div>
       </div>
-
-      <div class="form-group">
-        <label for="sourceAddr">Source Address:</label>
-        <input type="tel" class="form-control" placeholder="Enter source address" name="sourceAddr" [(ngModel)]="sms.sourceAddr" required pattern="[0-9 ]{8}" #sourceAddr="ngModel"
-        [class.is-invalid]="sourceAddr.invalid && sourceAddr.touched"
-        >
-        <div *ngIf="sourceAddr.errors && (sourceAddr.invalid && sourceAddr.touched)">
-            <small class="text-danger" *ngIf="sourceAddr.errors.required">Source address is required field!</small>
-             <small class="text-danger" *ngIf="sourceAddr.errors.pattern">Enter a valid phone number!</small>
-          </div>
-      </div>
-
-      <div class="form-group">
-        <label for="destAddr">Destination Address:</label>
-        <input type="tel" class="form-control" placeholder="Enter destination address" name="destAddr" [(ngModel)]="sms.destAddr" required pattern="[0-9 ]{8}" #destAddr="ngModel"
-        [class.is-invalid]="destAddr.invalid && destAddr.touched"
-        >
-        <div *ngIf="destAddr.errors && (destAddr.invalid && destAddr.touched)">
-            <small class="text-danger" *ngIf="destAddr.errors.required" >Destination address is required field!</small>
-        <small class="text-danger" *ngIf="destAddr.errors.pattern">Enter a valid phone number!</small>
-          </div>
-        
-      </div>
-
-      <button [disabled]="sendSmsform.form.invalid" type="submit" class="btn btn-info">Send Sms</button>
-      <button  type="reset" class="btn btn-light">Cancel</button>
-    </form>
+    
+    </div>
+    <!-- project team & activity end -->
+  </section>
+  <div class="text-right">
+    <div class="credits">
+      <!--
+        All the links in the footer should remain intact.
+        You can delete the links only if you purchased the pro version.
+        Licensing information: https://bootstrapmade.com/license/
+        Purchase the pro version form: https://bootstrapmade.com/buy/?theme=NiceAdmin
+      -->
+     <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>-->
+    </div>
   </div>
+</section>
+<!--main content end-->
