--- a/src/app/loginsuccess/loginsuccess.component.html
+++ b/src/app/loginsuccess/loginsuccess.component.html
@@ -22,11 +22,9 @@
     </div>
   </div>
 </section>
-<!--main content end-->
-<div class="container">    
-    <div class="col-md-6 col-md-offset-3 loginBox">    
-        Welcome,  {{id}}       
-    </div>    
-  </div>  
-
-
+<!--main content end-->  
+<section>
+  <app-statistique></app-statistique>  
+</section>
+  
+      
