--- a/src/app/statistique/statistique.component.html
+++ b/src/app/statistique/statistique.component.html
@@ -59,7 +59,7 @@
       ></apx-chart>
     </div>
 
-    <div class="row">
+   <!--<div class="row">
       <div class="col-lg-10">
         <table class="table table-striped table-advance table-hover">
           <th>date</th>
@@ -70,6 +70,6 @@
           </tr>
         </table>
       </div>
-      </div>
+      </div>-->
   
 </section>
