--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -227,7 +227,7 @@
             <ul class="dropdown-menu extended logout">
               <div class="log-arrow-up"></div>
               <li class="eborder-top">
-                <a href="#"><i class="icon_profile"></i> My Profile</a>
+                <a href="/profil"><i class="icon_profile"></i> My Profile</a>
               </li>
               <li>
                 <a href="javascript:void(0);" (click)="logout()"><i class="icon_key_alt"></i> Log Out</a>
