--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -290,6 +290,13 @@
                           <span>All Messages</span>
                       </a>
           </li>
+
+          <li >
+            <a class="" href="/users">
+              <i class="icon_profile"></i>
+                          <span>User Management</span>
+                      </a>
+          </li>
           
 
         
