--- a/src/app/profil/profil.component.html
+++ b/src/app/profil/profil.component.html
@@ -76,16 +76,16 @@
                       <h1>Bio Graph</h1>
                       <div class="row">
                         <div class="bio-row">
-                          <p><span>Name </span></p>
+                          <p><span>Name </span>{{userName}}</p>
                         </div>
                         <div class="bio-row">
-                          <p><span>Email </span>{{id}}</p>
+                          <p><span>Email </span>{{email}}</p>
                         </div>
                         <div class="bio-row">
-                          <p><span>Mobile </span></p>
+                          <p><span>Mobile </span>{{mobile}}</p>
                         </div>
                         <div class="bio-row">
-                          <p><span>Phone </span></p>
+                          <p><span>Phone </span>{{phone}}</p>
                         </div>
                       </div>
                     </div>
@@ -100,15 +100,15 @@
                   <section class="panel">
                     <div class="panel-body bio-graph-info">
                       <h1> Profile Info</h1>
-                      <form class="form-horizontal" role="form">
+                      <form class="form-horizontal" #form="ngForm" name="user" (ngSubmit)="updateProfile()"> 
                         <div class="form-group">
                           <label class="col-lg-2 control-label">Name</label>
                           <div class="col-lg-6">
-                            <input type="text" class="form-control" id="f-name" placeholder=" ">
+                            <input type="text" class="form-control" id="userName" name="userName" value={{userName}} [(ngModel)]="user.userName" >
                           </div>
                         </div>
                        
-                        <div class="form-group">
+                        <!--<div class="form-group">
                           <label class="col-lg-2 control-label">About Me</label>
                           <div class="col-lg-6">
                             <textarea name="" id="" class="form-control" cols="30" rows="5"></textarea>
@@ -119,39 +119,39 @@
                           <div class="col-lg-6">
                             <input type="text" class="form-control" id="c-name" placeholder=" ">
                           </div>
-                        </div>
+                        </div>-->
                         
                         <div class="form-group">
                           <label class="col-lg-2 control-label">Email</label>
                           <div class="col-lg-6">
-                            <input type="text" class="form-control" id="email" placeholder=" ">
+                            <input type="text" class="form-control" id="email" value={{email}} name="email" [(ngModel)]="user.emailId">
                           </div>
                         </div>
                         <div class="form-group">
                           <label class="col-lg-2 control-label">Mobile</label>
                           <div class="col-lg-6">
-                            <input type="text" class="form-control" id="mobile" placeholder=" ">
+                            <input type="text" class="form-control" id="mobile" value={{mobile}} name="mobile" [(ngModel)]="user.mobile">
                           </div>
                         </div>
                         
                         <div class="form-group">
                             <label class="col-lg-2 control-label">Phone</label>
                             <div class="col-lg-6">
-                              <input type="text" class="form-control" id="mobile" placeholder=" ">
+                              <input type="text" class="form-control" id="phone" value={{phone}} name="phone" [(ngModel)]="user.phone" >
                             </div>
                         </div>
 
-                        <div class="form-group">
+                        <!--<div class="form-group">
                             <label class="col-lg-2 control-label">Passwowrd</label>
                             <div class="col-lg-6">
-                              <input type="password" class="form-control" id="password" placeholder=" ">
+                              <input type="password" class="form-control" id="password" name="password" [(ngModel)]="user.password">
                             </div>
-                        </div>
+                        </div>-->
 
                         <div class="form-group">
-                          <div class="col-lg-offset-6 col-lg-4">
-                            <button type="submit" class="btn btn-primary">Save</button>
-                            <button type="reset" class="btn btn-danger">Cancel</button>
+                          <div class="col-lg-offset-7 col-lg-4">
+                            <button type="submit" class="btn btn-info" >Update</button>
+                            <!--<button type="reset" class="btn btn-danger">Cancel</button>-->
                           </div>
                         </div>
                       </form>
