--- a/src/app/resgistration/resgistration.component.html
+++ b/src/app/resgistration/resgistration.component.html
@@ -54,6 +54,28 @@
         </div>
 
         <div class="form-group">
+          <div class="float-right btextual">
+            <small class="text-danger" [class.d-none]="mobile.valid || mobile.untouched">mobile is required field!</small>
+          </div>
+          <input type="text" class="form-control" placeholder="Mobile number" 
+          name="mobile" [(ngModel)]="form.mobile" required #mobile="ngModel"
+          [class.is-invalid]="mobile.invalid && mobile.touched"
+          >
+        </div>
+
+        <div class="form-group">
+          <div class="float-right btextual">
+            <small class="text-danger" [class.d-none]="phone.valid || phone.untouched">phone is required field!</small>
+          </div>
+          <input type="text" class="form-control" placeholder="phone number" 
+          name="phone" [(ngModel)]="form.phone" required #phone="ngModel"
+          [class.is-invalid]="phone.invalid && phone.touched"
+          >
+        </div>
+
+        
+
+        <div class="form-group">
           <div class="float-right btextual" *ngIf="password.errors && (password.invalid && emailId.touched)">
             <small class="text-danger" *ngIf="password.errors.required">password is required field!</small>
             <div *ngIf="password.errors.minlength">
