--- a/src/app/users/userlist/userlist.component.html
+++ b/src/app/users/userlist/userlist.component.html
@@ -1,27 +1,29 @@
-<div class="row">
 
-<!--<div class="col-lg-3">
-  <form class="navbar-form">
-    <input class="form-control" type="text" name="search" placeholder="Search" [(ngModel)]="searchText" autocomplete="off" >
-  </form>
+<table class="table table-striped table-advance table-hover">
+  <thead  class="thead-light">
+    <th>Email</th>
+    <th>Name</th>
+    <th>Mobile</th>
+    <th>Phone</th>
+    <th>Role</th>
+    
+    <th>  <a class="btn btn-lg btn-success text-white" (click)="AddData(null,1)">
+      <i class="fa fa-plus"></i>Add</a>
+    </th>
+  </thead>
+  <tr *ngFor="let user of service.list | filter:u.searchText | paginate: { itemsPerPage: 5, currentPage: p}">
+    <td (click)="populateForm(user)">{{user.emailId}}</td>
+    <td (click)="populateForm(user)">{{user.userName}}</td>
+    <td (click)="populateForm(user)">{{user.mobile}}</td>
+    <td (click)="populateForm(user)">{{user.phone}}</td>
+    <td (click)="populateForm(user)">{{user.roles[0].name}}</td>
+    <td>
+      <button (click)="update(user)" class="btn btn-info"><i class="fa fa-pencil fa-lg"></i></button>
+      <button (click)="onDelete(user.id)" class="btn btn-danger"><i class="icon_close_alt2"></i></button>
+    </td>
+  </tr>
+</table>
+<div class="float-right">
+  <pagination-controls (pageChange)="p =$event"></pagination-controls>
 </div>
-</div>-->
 
-<div class="row">
-    <div class="col-lg-10">
-      <table class="table table-striped table-advance table-hover">
-        <th>Email</th>
-        <th>Name</th>
-        <th>Role</th>
-        
-        <th> <i class="icon_cogs"></i>Action</th>
-        <tr *ngFor="let user of service.list | filter:u.searchText">
-          <td (click)="populateForm(user)">{{user.emailId}}</td>
-          <td (click)="populateForm(user)">{{user.userName}}</td>
-          <td (click)="populateForm(user)">{{user.role}}</td>
-          <td>
-            <button (click)="onDelete(user.id)" class="btn btn-danger"><i class="icon_close_alt2"></i></button>
-          </td>
-        </tr>
-      </table>
-    </div>
