--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,13 @@
 
 
 <header class="header dark-bg">
-  <div class="toggle-nav">
+    <!--<div class="toggle-nav">
     <div class="icon-reorder tooltips" data-original-title="Toggle Navigation" data-placement="bottom">
       <i class="icon_menu"></i></div>
   </div>
 
-  <!--logo start-->
-  <a href="index.html" class="logo">SMPP <span class="lite">Admin</span></a>
+logo start-->
+  <a href="index.html" class="logo">SMPP <span class="lite">Client</span></a>
   <!--logo end-->
 
   <div class="nav search-row" id="top_menu">
