--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -68,12 +68,15 @@
           minlength="6">
         </div>
 
-        <label class="checkbox">
+        <!--<label class="checkbox">
                 <input type="checkbox" value="remember-me"> Remember me
                 <span class="pull-right"> <a href="/login/#"> Forgot Password?</a></span>
-            </label>
+            </label>-->
         <button class="btn btn-primary btn-lg btn-block" type="submit" [disabled]="loginform.form.invalid">Login</button>
         <button class="btn btn-info btn-lg btn-block" type="submit" [routerLink]="['/registration']">Signup</button>
+      </div>
+      <div class="alert alert-danger" *ngIf="loginform.submitted && isLoginFailed">
+       <b> Login failed!</b><br />{{ errorMessage }}
       </div>
     </form>
 
