--- a/src/app/resgistration/resgistration.component.html
+++ b/src/app/resgistration/resgistration.component.html
@@ -76,7 +76,7 @@
         
 
         <div class="form-group">
-          <div class="float-right btextual" *ngIf="password.errors && (password.invalid && emailId.touched)">
+          <div class="float-right btextual" *ngIf="password.errors && (password.invalid && password.touched)">
             <small class="text-danger" *ngIf="password.errors.required">password is required field!</small>
             <div *ngIf="password.errors.minlength">
               <small class="text-danger">Password must be at least 6 characters</small>
@@ -160,6 +160,8 @@
 
 </html>
 
+
+<app-footer></app-footer>
 
 
 
