--- a/src/app/sms-list/sms-list.component.html
+++ b/src/app/sms-list/sms-list.component.html
@@ -1,12 +1,12 @@
 
 <app-dashboard></app-dashboard>
 <!--main content start-->
-<section id="main-content" *ngIf="authService.isAdmin()">
+<section id="main-content">
   <section class="wrapper">
     <!--overview start-->
     <div class="row">
       <div class="col-lg-9">
-        <h3 class="page-header"><i class="fa fa-table"></i>Messages</h3>
+        <h3 class="page-header"><i class="fa fa-send-o"></i>Send</h3>
       </div>
 
       <div class="col-lg-3">
@@ -20,14 +20,23 @@
       <div class="col-lg-12">
         <ol class="breadcrumb">
           <li><i class="fa fa-home"></i><a href="/loginsuccess">Home</a></li>
-          <li><i class="fa fa-th-list"></i>All Messages</li>
+          <li><i class="fa fa-send-o"></i>Sent messages</li>
         </ol>
       </div>
     </div>
 
 
-<br>
 
+<div class="row" *ngIf="!authService.isAdmin()">
+  <div class="col-lg-9"></div>
+  <div class="col-lg-3">
+     <a class="btn btn-lg btn-secondary text-white" (click)="SendData(null,1)">
+    <h6><span class="fa fa-send" style="color:#4f4;"></span>Send One</h6></a> |
+
+    <a class="btn btn-lg btn-secondary text-white" (click)="AddData(null,1)">
+    <h6><span class="fa fa-send" style="color:#4f4;"></span>Multi-Send</h6></a>
+  </div>
+</div>
 <div class="row">
   <div class="col-lg-12">
     <table class="table table-striped table-advance table-hover">
@@ -37,19 +46,25 @@
       <th>Destination Address</th>
       <th>Date</th>
       <th> <i class="icon_cogs"></i>Action</th>
+      
       </thead>
-      <tr *ngFor="let sms of service.list | filter:searchText | paginate: { itemsPerPage: 10, currentPage: p}">
+      <tr *ngFor="let sms of service.list | filter:searchText | paginate: { itemsPerPage: 8, currentPage: p}">
         <td (click)="populateForm(sms)">{{sms.shortMessage}}</td>
         <td (click)="populateForm(sms)">{{sms.sourceAddr}}</td>
         <td (click)="populateForm(sms)">{{sms.destAddr}}</td>
-        <td (click)="populateForm(sms)">{{sms.dateTime}} at {{sms.time}}</td>
+        <td (click)="populateForm(sms)">{{sms.dateTime}} <b>at</b> {{sms.time}}</td>
         <td>
-          <button (click)="onDelete(sms.id)" class="btn btn-danger"><i class="icon_close_alt2"></i></button>
+          <button (click)="onDelete(sms.id)" class="btn btn-danger"><i class="fa fa-trash-o"></i></button>
         </td>
       </tr>
     </table>
+     <div class="float-right">
+      <button class="btn btn-lg btn-danger text-white" (click)="deleteAll()"> <i class="fa fa-trash-o"></i> Delete ALL</button>
+    </div>
     <div class="float-right">
       <pagination-controls (pageChange)="p =$event"></pagination-controls>
+      
     </div>
+   
   </div>
   
