--- a/src/app/users/user/user.component.html
+++ b/src/app/users/user/user.component.html
@@ -57,20 +57,33 @@
           >
         </div>
 
-        <div class="float-right btextual">
-          <small class="text-danger" [class.d-none]="password.valid || password.untouched">password is required field!</small>
-        </div>
+        <!--<div class="float-right btextual" *ngIf="password.errors && (password.invalid && password.touched)">
+          <small class="text-danger" *ngIf="password.errors.required">password is required field!</small>
+          <div *ngIf="password.errors.minlength">
+            <small class="text-danger">Password must be at least 6 characters</small>
+          </div>
+        </div>-->
         <label>Password</label>
         <div class="input-group input-group-lg" >
           <div class="input-group-prepend">
           </div>
             
-          <input type="password" class="form-control"  name="password" [(ngModel)]="user.password" required #password="ngModel"
-          [class.is-invalid]="password.invalid && password.touched" data-rule="minlen:8" data-msg="Please enter at least 8 chars"
-          aria-describedby="inputGroup-sizing-sm" aria-label="password" >
+          <input *ngIf="service.isOk" type="password" class="form-control"  name="password" [(ngModel)]="user.password" required #password="ngModel"
+          [class.is-invalid]="password.invalid && password.touched"  minlength="6"
+          aria-describedby="inputGroup-sizing-sm" aria-label="password" 
+          required 
+            [class.is-invalid]="password.invalid && password.touched">
+         </div>
+         <div>
+         <input *ngIf="!service.isOk" disabled type="password" class="form-control"  name="password" [(ngModel)]="user.password" required #password="ngModel"
+          [class.is-invalid]="password.invalid && password.touched"  minlength="6"
+          aria-describedby="inputGroup-sizing-sm" aria-label="password" 
+          required 
+            [class.is-invalid]="password.invalid && password.touched">
          </div>
 
 
+         
          <!--<div class="float-right btextual">
           <small class="text-danger" [class.d-none]="(pwd.value == password.value) || pwd.untouched">password and confirm password must be the same!</small>
          </div>
@@ -87,18 +100,22 @@
           <div class="input-group input-group-lg" >
             
             <select class="form-control" id="roles" aria-describedby="inputGroup-sizing-sm" aria-label="roles" 
-            [(ngModel)]="user.roles" #roles>
-              <option >User</option>
-              <option >Administrator</option>
-              
+            [(ngModel)]="user.roles" #roles >
+              <option *ngFor="let r of roleInfos | async">{{r.name}}</option>
             </select>
           </div>
           <br>
+
+          
           
         <div class="text-right">
           <button [disabled]="form.form.invalid" type="submit" class="btn btn-info">Submit</button>
           <button  type="reset" class="btn btn-light">Cancel</button>
         </div>
+
+        <div class="alert alert-danger" *ngIf="form.submitted && isSignUpFailed">
+          <b> Failed!</b><br />{{ errorMessage }}
+         </div>
       
       </div>
     </form>
